Dialer: improve speed dial list activity
- change the theme into same style as others in dialer.
- cut the context menu and change the operation in dialog when user
  clicks list item.

Change-Id: I41fc08621121c5d06692949b0e597b93ee4c7805
CRs-Fixed: 750289

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -240,8 +240,9 @@
         </receiver>
 
         <activity android:name=".SpeedDialListActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden|uiMode"
-            android:label="@string/set_speed_dial" >
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/set_speed_dial"
+            android:theme="@style/SettingsStyle" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
