--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,6 +57,18 @@
     <uses-permission android:name="android.permission.STOP_APP_SWITCHES" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="com.qualcomm.permission.USE_PHONE_SERVICE" />
+    <uses-permission android:name="com.android.firewall.READ_GRAVITY"/>
+    <uses-permission android:name="com.android.firewall.WRITE_GRAVITY"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.WRITE_SMS"/>
+    <!-- RCS -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- wifi -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="DialerApplication"
@@ -70,7 +82,7 @@
             android:value="AEdPqrEAAAAIBXgtCEKQ6W0PXVnW-ZVia2KmlV2AxsTw3GjAeQ" />
 
         <uses-library android:name="com.qualcomm.qti.smartsearch" />
-
+        <uses-library android:name="com.suntek.mway.rcs.client.api" android:required="false" />
         <!-- The entrance point for Phone UI.
              stateAlwaysHidden is set to suppress keyboard show up on
              dialpad screen. -->
